[project]               
name = "ambiente"
version = "0.1.0"
description = ""
authors = [
    {name = "Calheias",email = "gabrielcalheiasalves1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "ambiente", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "poethepoet (>=0.38.0,<0.39.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poe.tasks]
lint = "ruff check ."
format = "black ."
test = "pytest"
typecheck = "mypy src"
check = ["lint", "format --check", "typecheck", "test"]


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

